fix: ensure that the portfolio has enough spacing

--- a/src/portfolio/index.css
+++ b/src/portfolio/index.css
@@ -9,6 +9,9 @@
 main {
     background-color: var(--sky-color);
     background-image: linear-gradient(0, white 0%, var(--sky-color) 100%);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     padding: var(--outer-margin);
 }
 
